grammar.js
    module: $ => field("entities", optional($._entities)),

    _entities: $ =>
      repeat1(choice($._decl, $.import, seq($.property, ";"), $.statement)),

    // Make this higher precedence than `statement` so we match a top-level decls directly.
    module_decl: $ => seq("module", field("name", $.ident), ";"),

    linkage: _ => choice("local", "global", "const", "var"),

    var_decl: $ =>
      seq(
        optional($.visibility),
        $.linkage,
        field("name", $.ident),
        optional(seq(":", field("type_", $.typename))),
        optional($.optional),
        optional(seq("=", field("init", $.expression))),
        optional($.attribute),
        ";",
      ),

    type_decl: $ =>
      seq(
        optional($.visibility),
        "type",
        field("name", $.ident),
        "=",
        choice(
          $._unit_decl,
          $.library_type,
          seq($.typename, repeat($.attribute)),
        ),
        ";",
      ),

    struct_decl: $ =>
      seq(
        optional($.visibility),
        "type",
        field("name", $.ident),
        "=",
        "struct",
        "{",
        repeat(alias($._struct_field, $.field_decl)),
        "}",
        ";",
      ),

    _struct_field: $ =>
      seq(field("name", $.ident), ":", $.typename, optional($.attribute), ";"),

    _unit_decl: $ =>
      seq(
        "unit",
        optional($.params),
        "{",
        repeat($._unit_item),
        "}",
        repeat($.attribute),
      ),

    hook_decl: $ =>
      prec.right(
        seq(
          "on",
          field("name", choice($.ident, $._hook)),
          optional(
            seq("(", optional(commaSep1(seq($.ident, ":", $.typename))), ")"),
          ),
          optional($.hook_priority),
          choice(
            seq(
              seq(repeat(choice($.is_debug, $.is_error)), optional($.foreach)),
              seq(repeat(choice($.is_debug, $.is_error)), optional($.block)),
            ),
          ),
        ),
      ),

    field_decl: $ =>
      prec.right(
        seq(
          field("name", optional($.ident)),
          ":",
          field("skip", optional($.is_skip)),
          choice($._parse_type, seq("(", $._parse_type, ")")),
          field("attributes", repeat($.attribute)),
          field(
            "conditional",
            optional(prec(2000, seq("if", "(", $.expression, ")"))),
          ),
          optional(prec.left(seq("->", field("sink", $.expression)))),
          choice(
            seq(
              seq(optional($.is_debug), optional($.foreach)),
              seq(optional($.is_debug), optional($.block)),
            ),
            ";",
          ),
        ),
      ),

    _parse_type: $ =>
      prec.right(
        50,
        seq(
          field(
            "type_",
            choice(
              $.typename,
              $.vector,
              $.regexp,
              $.bitfield,
              $.bytes,
              $.array_access,
              $.void,
            ),
          ),
          field(
            "type_ctor_args",
            optional(seq("(", optional(commaSep1($.expression)), ")")),
          ),
          field("attributes", repeat($.attribute)),
        ),
      ),

    optional: _ => "&optional",

    _attribute__or_property_name: _ =>
      /[&|%][a-zA-Z_][a-zA-Z0-9_]*(-[a-zA-Z0-9_]+)*/,

    attribute_name: $ => $._attribute__or_property_name,
    attribute: $ =>
      seq(
        field("attribute_name", $.attribute_name),
        optional(seq("=", field("attribute_value", prec.right($.expression)))),
      ),

    statement: $ =>
      prec(
        1,
        choice(
          choice($.block, seq($.expression, ";")),
          $.assert,
          $.delete,
          $.export_,
          $.throw_,
          $.print,
          $.return,
          $.unset,
          seq($.continue, ";"),
          seq($.break, ";"),
          seq($.stop, ";"),
          $.while,
          $.for,
          $.if,
          $.switch,
        ),
      ),

    expression: $ =>
      prec(
        10,
        choice(
          $.self_id,
          $.dd,
          $.ident,
          $.integer,
          $.real,
          $.boolean,
          $.list,
          $.tuple,
          $.map,
          $.string,
          $.bytes,
          $.regexp,
          $.capture_group,
          $.struct_ctr,
          $._address,
          $.network,
          $.port,
          $.char,
          $.bitfield,
          $.assign,
          $.unary_op,
          $.binary_op,
          $.pre,
          $.post,
          $.len,
          choice($.contains, $.contains_not),
          $.cast,
          $.new,
          $.set_add,
          $.list_comp,
          $.function_call,
          $.type_member,
          $.type_member_call,
          $.array_access,
          $.type_member_checked,
          $.type_member_check,
          $.ternary,
          $.error_literal,
          $.condition_check,
          $.null,
          prec(2000, seq("(", $.expression, ")")),
        ),
      ),

    typename: $ =>
      prec(
        4000,
        choice(
          seq(choice($.ident, $.parameterized_type), repeat(choice("&", "[]"))),
          $.bitfield,
        ),
      ),

    parameterized_type: $ =>
      seq(
        $._parameterized_type_name,
        "<",
        commaSep1(
          seq(
            // Allow for named fields in tuples.
            optional(field("name", seq($.ident, ":"))),
            field("type_", $.typename),
          ),
        ),
        optional(","),
        ">",
      ),

    _parameterized_type_name: () =>
      choice(
        // `map` handled separately.
        "iterator",
        "map",
        "optional",
        "result",
        "set",
        "tuple",
        "vector",
        "view",
      ),

    unset: $ => seq("unset", $.expression, ";"),

    type_member: $ =>
      prec.left(10000, seq($.expression, seq(".", $.type_member_ident))),

    type_member_ident: $ => $.ident,

    block: $ => seq("{", repeat(choice($.statement, $.var_decl)), "}"),

    self_id: _ => "self",
    ident: $ => seq($.name, optional(seq("::", $.ident))),
    name: _ => /[a-zA-Z_]|[a-zA-Z_][a-zA-Z_0-9]*[a-zA-Z_0-9]/,
    _address: $ => choice($.address4, $.address6),
    _hook: $ => choice($.hook_name, seq($.ident, token("::"), $.hook_name)),
    hook_name: $ => seq("%", alias($.name, $.ident)),
