test/corpus/types/optional
================================================================================
Optional
================================================================================
module bla;

type X = unit {
    var x: uint64 &optional;
    on %init { unset self.x;}
};
--------------------------------------------------------------------------------

(module
  (module_decl
    (ident
      (name)))
  (type_decl
    (ident
      (name))
    (var_decl
      (linkage)
      (ident
        (name))
      (typename
        (ident
          (name)))
      (optional))
    (hook_decl
      (hook_name
        (ident))
      (block
        (statement
          (unset
            (expression
              (type_member
                (expression
                  (self_id))
                (type_member_ident
                  (ident
                    (name)))))))))))
