test/corpus/types/struct
================================================================================
Struct
================================================================================

type S = struct {};
type S = struct { a: uint8; s: S &foo; };
type S = struct { not_a_parseable_type: vector<uint8>; };

--------------------------------------------------------------------------------

(module
  (struct_decl
    (ident
      (name)))
  (struct_decl
    (ident
      (name))
    (field_decl
      (ident
        (name))
      (typename
        (ident
          (name))))
    (field_decl
      (ident
        (name))
      (typename
        (ident
          (name)))
      (attribute
        (attribute_name))))
  (struct_decl
    (ident
      (name))
    (field_decl
      (ident
        (name))
      (typename
        (parameterized_type
          (typename
            (ident
              (name))))))))
